Duck Hunt complete game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,13 @@
     <string name="app_name">Arcade</string>
     <string name="start">START</string>
     <string name="zero">0</string>
-    <string name="duck_hunt">Duck Hunt</string>
     <string name="sixty">60</string>
-    <string name="game_over">Game Over</string>
+    <string name="duck_hunt">Duck Hunt</string>
     <string name="total_points">Total Points</string>
+    <string name="game_over">Game Over</string>
     <string name="exit">Exit</string>
     <string name="ranking">Ranking</string>
     <string name="sign_in_google">SIGN IN WITH GOOGLE</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="tictactoe">TicTacToe</string>
 </resources>
