--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="sign_in_google">SIGN IN WITH GOOGLE</string>
     <string name="sign_out">Sign Out</string>
     <string name="tictactoe">TicTacToe</string>
+    <string name="play">Play</string>
+    <string name="loading">Loading</string>
+    <string name="searching_match">Search Match</string>
+    <string name="creating_match">Creating A Match</string>
 </resources>
