--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="loading">Loading</string>
     <string name="searching_match">Search Match</string>
     <string name="creating_match">Creating A Match</string>
+    <string name="waiting_player">Waiting Player</string>
+    <string name="start_game">Start Game</string>
+    <string name="found_match">Found Match</string>
+    <string name="sign_in">Sign In</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="user_name">Name</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="login">Login</string>
 </resources>
